# libcappuccino

./: .gitignore  CMakeLists.txt  README.md  Setup.cmake
.githooks/: pre-commit  readme-template.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt  allow_example.cpp  bench.cpp  fifo_simple.cpp  lfu_simple.cpp  lfuda_simple.cpp  lru_bench.cpp  lru_simple.cpp  lru_uniform_ttl_bench.cpp  lru_uniform_ttl_simple.cpp  mru_simple.cpp  rr_simple.cpp  tlru_simple.cpp  ut_map_simple.cpp  ut_set_simple.cpp  utlru_simple.cpp  utmap_simple.cpp  utset_simple.cpp
inc/cappuccino/: Allow.hpp  Cappuccino.h  Cappuccino.hpp  CappuccinoLock.h  CappuccinoLock.hpp  FifoCache.h  FifoCache.hpp  FifoCache.tcc  InsertMethodEnum.hpp  LfuCache.h  LfuCache.hpp  LfuCache.tcc  LfudaCache.h  LfudaCache.hpp  LfudaCache.tcc  Lock.hpp  LockScopeGuard.h  LruCache.h  LruCache.hpp  LruCache.tcc  LruCacheUniformTtl.h  LruCacheUniformTtl.tcc  MruCache.h  MruCache.hpp  MruCache.tcc  Peek.hpp  RrCache.h  RrCache.hpp  RrCache.tcc  SyncImplEnum.h  SyncImplEnum.hpp  TlruCache.h  TlruCache.hpp  TlruCache.tcc  UtMap.hpp  UtSet.hpp  UtlruCache.h  UtlruCache.hpp  UtlruCache.tcc  allow.hpp  (+13 more)
src/: Allow.cpp  InsertMethodEnum.cpp  Lock.cpp  Peek.cpp  SyncImplEnum.cpp  allow.cpp  lock.cpp  peek.cpp
test/: CMakeLists.txt  FifoTest.cpp  FifoTest.hpp  LfuTest.cpp  LfuTest.hpp  LfudaTest.cpp  LfudaTest.hpp  LruTest.cpp  LruTest.hpp  MruTest.cpp  MruTest.hpp  RrTest.cpp  RrTest.hpp  TlruTest.cpp  TlruTest.hpp  UnitTestTlruCache.cpp  UnitTestUtlruCache.cpp  UtMapTest.cpp  UtMapTest.hpp  UtSetTest.cpp  UtSetTest.hpp  UtlruTest.cpp  UtlruTest.hpp  catch.cpp  catch.hpp  main.cpp  test_fifo_cache.cpp  test_lfu_cache.cpp  test_lfuda_cache.cpp  test_lru_cache.cpp  test_mru_cache.cpp  test_rr_cache.cpp  test_tlru_cache.cpp  test_ut_map.cpp  test_ut_set.cpp  test_utlru_cache.cpp
